--- a/src/components/Client/FormSearchOrder/FormSearchOrder.module.scss
+++ b/src/components/Client/FormSearchOrder/FormSearchOrder.module.scss
@@ -16,9 +16,10 @@
   left: 50%;
   transform: translateX(-50%);
   height: 0;
+  overflow: hidden;
   background-color: #ebf4f9;
   opacity: 0;
-  transition: 0.3ms;
+  transition: 0.2s;
 
   &.show {
     height: 199px;
