--- a/src/components/Client/UI/InputPhone/InputPhone.module.scss
+++ b/src/components/Client/UI/InputPhone/InputPhone.module.scss
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: space-between;
     width: 352px;
+    height: 52px;
     padding: 4px;
     border-radius: 100px;
     background-color: $MainWhite;
