--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -47,7 +47,7 @@ h4 {
   }
 
   .MuiInputBase-input {
-    height: 44px;
+    height: auto;
     padding: 0;
     color: $TextInput;
     font-size: 20px;
