--- a/src/app/(frontend)/basket/style.module.scss
+++ b/src/app/(frontend)/basket/style.module.scss
@@ -14,7 +14,7 @@
     gap: 20px;
     max-height: calc(100vh - 290px);
     margin-top: 30px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   .title {
