--- a/src/components/Client/SliderPhotoProductType/SlideTypeProduct/SlideTypeProduct.module.scss
+++ b/src/components/Client/SliderPhotoProductType/SlideTypeProduct/SlideTypeProduct.module.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  height: 180px;
+  height: 200px;
 
   & .image {
     object-fit: contain;
@@ -12,7 +12,7 @@
 
 .photoName {
   position: absolute;
-  bottom: 0;
+  bottom: 1px;
   left: 0;
   text-align: center;
   width: 100%;
@@ -23,7 +23,7 @@
 .sliderItem {
   position: relative;
   height: calc(100% - 15px);
-  width: 250px;
+  width: 300px;
   display: flex;
   justify-content: space-between;
 }
