--- a/src/components/Client/PhotoCard/PhotoCard.module.scss
+++ b/src/components/Client/PhotoCard/PhotoCard.module.scss
@@ -32,6 +32,7 @@
     align-items: center;
     background-color: $MainWhite;
     border-radius: 50px;
+    cursor: pointer;
   }
 
   .statusMark {
@@ -45,6 +46,12 @@
     &.visible {
       opacity: 1;
     }
+  }
+
+  .wrapperbtnPrint {
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
   }
 
   .wrapperBtn {
