--- a/src/components/Client/PreviewPhoto/PreviewPhoto.module.scss
+++ b/src/components/Client/PreviewPhoto/PreviewPhoto.module.scss
@@ -86,3 +86,24 @@
 .arrowNext {
   right: 20px;
 }
+
+/* контейнер для кнопок активного слайда */
+.buttonsWrapper {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  height: 68px;
+}
+.wrapperbtnPrint {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  z-index: 10000; /* точно над Watermark */
+}
+.wrapperBtn {
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+  z-index: 10000;
+}
