--- a/src/components/Client/SlidePreview/SlidePreview.module.scss
+++ b/src/components/Client/SlidePreview/SlidePreview.module.scss
@@ -10,6 +10,14 @@
     object-fit: contain;
   }
 }
+
+.wrapperbtnPrint {
+  position: absolute;
+  z-index: 10000;
+  bottom: 20px;
+  left: 20px;
+}
+
 .wrapperBtn {
   position: absolute;
   z-index: 10000;
@@ -17,13 +25,21 @@
   right: 20px;
 }
 
-.photoName {
+.photoNameWrap {
   position: absolute;
   bottom: 10px;
   left: 0;
-  text-align: center;
+  display: flex;
+  justify-content: center;
   width: 100%;
   z-index: 10;
+}
+
+.photoName {
+  width: fit-content;
+  text-align: center;
+  background-color: #d9d9d9;
+  padding: 0 1px;
 }
 
 .sliderItem {
@@ -31,6 +47,7 @@
   display: flex;
   justify-content: center;
   height: 100%;
+  width: 100%;
 }
 
 .load {
