--- a/src/app/(frontend)/basket/style.module.scss
+++ b/src/app/(frontend)/basket/style.module.scss
@@ -2,9 +2,17 @@
   height: calc(100vh - 160px);
   overflow: hidden;
 
-  .dateOrder {
-    display: block;
+  .infoWrapper {
     margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .dateOrder,
+  .nameOrder {
+    display: block;
     text-align: center;
   }
 
@@ -31,10 +39,21 @@
   display: flex;
   justify-content: center;
   margin-top: 40px;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
 }
 
 .wrapperSliderPhotoProduct {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+.warning {
+  text-align: center;
+  color: #ec2e1a;
+  background: #ebf4f9f0;
+  border-radius: 30px;
+  padding: 10px;
+  display: inline-block;
 }
