--- a/src/app/(frontend)/search-photo/style.module.scss
+++ b/src/app/(frontend)/search-photo/style.module.scss
@@ -11,15 +11,14 @@
 
   .wrapperFolders {
     display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: flex-start;
-  gap: 30px;
-  row-gap: 20px;
-  margin-top: 20px;
-  max-height: calc(100vh - 290px);
-  overflow-y: auto; 
-
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    gap: 50px;
+    row-gap: 20px;
+    margin-top: 20px;
+    max-height: calc(100vh - 290px);
+    overflow-y: auto;
   }
 
   .linkBasket {
@@ -31,5 +30,10 @@
     display: flex;
     justify-content: center;
     margin-top: 40px;
+  }
+
+  .infoWrapper {
+    display: flex;
+    gap: 50px;
   }
 }
