--- a/src/app/(frontend)/edit-order/style.module.scss
+++ b/src/app/(frontend)/edit-order/style.module.scss
@@ -13,10 +13,21 @@
     text-align: center;
   }
 
+  .infoWrapper {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
   .dateOrder {
     display: block;
     text-align: center;
-    margin-top: 10px;
+    color: $TextInput;
+  }
+
+  .nameOrder {
     color: $TextInput;
   }
 
@@ -32,8 +43,23 @@
 
 .wrapperBtn {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+}
+
+.wrapperConfirm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.warning {
+  text-align: center;
+  color: #ec2e1a;
+  background: #ebf4f9f0;
+  border-radius: 30px;
+  padding: 10px;
+  display: inline-block;
 }
