--- a/src/components/Client/FormSearchOrder/FormSearchOrder.module.scss
+++ b/src/components/Client/FormSearchOrder/FormSearchOrder.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/variables.scss';
+
 .FormSearchOrder {
   margin-top: 50px;
   display: flex;
@@ -24,5 +26,39 @@
   &.show {
     height: 199px;
     opacity: 1;
+  }
+}
+
+.InputWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  .telWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 352px;
+    height: 52px;
+    padding: 4px;
+    border-radius: 100px;
+    background-color: $MainWhite;
+    border: 1px solid $StrokeInput;
+  }
+
+  .Input {
+    width: 444px;
+    padding: 0 20px;
+  }
+
+  .wrapperArrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background-color: $Orange;
+    cursor: pointer;
   }
 }
