-add unique index to the database -add selective thumbnail caching

--- a/src/app/(frontend)/super-admin/style.module.scss
+++ b/src/app/(frontend)/super-admin/style.module.scss
@@ -17,4 +17,16 @@
       background-color: grey;
     }
   }
+
+  .startMonitoringAll {
+    width: 180px;
+  }
+
+  .startMonitoringToday {
+    width: 237px;
+  }
+
+  .startCleaner {
+    width: 181px;
+  }
 }
